--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -153,6 +153,7 @@ img {
 }
 .menu__logo {
   display: none;
+  transition: all 0.3s ease-in-out;
 }
 .shadow {
   display: none;
@@ -161,8 +162,7 @@ img {
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
-  transition: 1s;
-  animation: ani 0.4s forwards;
+  transition: opacity 0.4s ease-in-out;
   z-index: 2;
 }
 /* friends */
@@ -212,11 +212,11 @@ img {
   height: 435px;
   border-radius: 9px;
   background-color: #FAFAFA;
-  transition: 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 .friends__item:hover {
   background-color: #FFFFFF;
-  
+  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
 }
 .friends__card-img {
   max-height: 270px;
@@ -331,8 +331,132 @@ img {
 }
 .btn-inactive {
   border: 2px solid #CDCDCD;
+  cursor: default;
 }
 
+
+/* modals */
+.modal-overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
+}
+.modal {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  width: 950px;
+  height: 550px;
+  border-radius: 10px;
+  display: none;
+}
+
+.modal-overlay--visible {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease-in-out;
+}
+.modal__content {
+  display: flex;
+  gap: 29px;
+  width: 900px;
+  height: 500px;
+  background-color: white;
+  border-radius: 10px;
+  transform: translateY(48px);
+  box-shadow: 0px 2px 35px 14px rgba(13, 13, 13, 0.04);
+}
+.modal--visible {
+  display: block;
+
+}
+
+.modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  width: 52px;
+  height: 52px;
+  border-radius: 100px;
+  border: 2px solid #F1CDB3;
+  background-image: url('../../assets/icons/close.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+.modal-close:hover {
+  background: #FDDCC4;
+  background-image: url('../../assets/icons/close.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.modal__list {
+  display: flex;
+  flex-direction: column;
+}
+.modal__item {
+  background-image: url('../../assets/icons/dot.svg');
+  background-position: left;
+  background-repeat: no-repeat;
+
+
+}
+.modal__item span {
+  display: block;
+  padding-left: 10px;
+  font-size: 15px;
+  line-height: 17px;
+  letter-spacing: 0.06em;
+}
+.modal__image {
+  max-width: 500px;
+  flex: 0 1 60%;
+}
+.modal__image img {
+  max-width: none;
+  border-radius: 0px 0px 0 9px;
+}
+.modal__wrap {
+  flex: 0 1 60%;
+  margin-top: 50px;
+  margin-right: 20px;
+}
+.modal__title {
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 45px;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.modal__type {
+  display: block;
+  margin-bottom: 40px;
+  font-size: 20px;
+  line-height: 23px;
+  letter-spacing: 0.06em;
+}
+.modal__descr {
+  margin-bottom: 40px;
+  font-size: 15px;
+  line-height: 17px;
+  letter-spacing: 0.06em;
+}
 
 
 /* footer */ 
@@ -448,6 +572,9 @@ img {
   height: auto;
   object-fit: contain;
 }
+.stop-scroll {
+  overflow: hidden;
+}
 
 @media (max-width: 1151px) {
   .footer__contacts__title {
@@ -512,6 +639,21 @@ img {
     justify-content: center;
 
   } 
+  .modal {
+    max-width: 90%;
+    height: fit-content;
+  }
+  .modal__content {
+    max-width: 93%;
+
+  }
+  .modal__image {
+    max-width: fit-content;
+    flex: 0 1 54.5%;
+  }
+  .modal__image img {
+    max-width: 100%;
+  }
 }
   @media (max-width: 965px) {
     .footer__contacts__title {
@@ -519,6 +661,20 @@ img {
     }
     .footer__location__title {
       max-width: 90%;
+    }
+    .modal__content {
+      height: fit-content;
+      gap: 11px
+    }
+    .modal__wrap {
+      margin-top: 10px;
+      margin-right: 5px;
+    }
+    .modal__type {
+      margin-bottom: 20px;
+    }
+    .modal__descr {
+      margin-bottom: 20px;
     }
     
 }
@@ -574,6 +730,23 @@ img {
   }
   
   
+}
+@media (max-width: 766px) {
+  .modal__image {
+    display: none;
+  }
+  .modal__wrap {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0px;
+    padding: 10px;
+    flex: 0 1 100%
+  }
+  .modal__list {
+    align-self: flex-start
+  }
 }
 @media (max-width: 750px) {
   .stop-scroll {
@@ -684,17 +857,32 @@ img {
     align-items: center;
   }
   .footer__contacts {
-    width: 278px;
+    width: 279px;
     margin-left: 0;
-  }
-  .footer__location {
-    margin-top: 0;
-    margin-right: 0;
   }
   .footer__contacts__wrap-phone {
     margin-bottom: 40px;
   }
+  .footer__location {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0;
+    margin-right: 0;
+  }
+  .footer__location__wrap-second {
+    width: 302px;
+  }
+  .footer__location__wrap-title {
+    width: 270px;
+  }
   
+}
+@media (max-width: 620px) {
+  .modal-close {
+    top: -5px;
+    right: -5px;
+  }
 }
 @media (max-width: 580px) {
   
@@ -734,6 +922,13 @@ img {
   .friends__title {
     max-width: 100%;
   }
+  .modal__descr {
+    font-size: 13px;
+    line-height: 14.3px;
+    text-align: justify;
+    letter-spacing: 0.06em;
+
+}
 }
 @media (max-width: 425px) {
   .burger {
